# custom_qq_client

./: .gitignore  .tmp-openclaw-qqbot-1.6.7.tgz  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  config.toml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fix-config.sh  fix-model.sh  force-reset-openclaw-docker.sh  install-openclaw-ubuntu.sh  open-openclaw-console.sh  package-lock.json  quick-update.sh  setup-openclaw.sh
.cursor/rules/: network-proxy.mdc
openclaw-config/: .env.example  SOUL.md  openclaw.json
openclaw-notes/: architecture.md
skills/bilibili-dynamics/: SKILL.md
src/: config.rs  error.rs  main.rs
src/platform/bilibili/: client.rs  mod.rs  parser.rs  types.rs
src/push/: mod.rs  onebot.rs
src/storage/: mod.rs  sqlite.rs
